hotelsystem/force-app/main/default/objects/Room__c/fields/Price_per_Day__c.field-meta.xml
<CustomField>
    <fullName>Price_per_Day__c</fullName>
    <label>Price per Day</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>